# game

./: .gitignore  Cargo.toml  Makefile  README.md  debug.sh  game.asd  load.lisp  run.sh  watch-loop.sh
assets/: simple.vert  tri.lisp
assets/fonts/: ter-u32n.json
assets/models/: teapot-low-poly.vx  (+1 more)
bootstrapper/: Makefile
docker/: Dockerfile  build.sh
loader/: Makefile
nova/: Cargo.toml  example.c  nova.h
nova/examples/: lye.rs  nova.rs
nova/lye/: Cargo.toml
nova/lye/src/: command.rs  device.rs  framebuffers.rs  instance.rs  layout.rs  lib.rs  shader.rs  swapchain.rs  vertex.rs  window.rs
nova/lye/src/buffer/: immutable.rs  mutable.rs
nova/lye/src/pipelines/: forward.rs  mod.rs
nova/src/: bufs.rs  cmds.rs  draw.rs  ffi.rs  imgs.rs  init.rs  lib.rs  main.rs  pipeline.rs  sync.rs  utils.rs
nova/src/ffi/: mod.rs
nova/src/lye/: device.rs  framebuffer.rs  framebuffers.rs  instance.rs  mod.rs  shader.rs  swapchain.rs  vertex.rs  window.rs
nova/src/lye/pipelines/: forward.rs  mod.rs
preassets/: Cargo.toml
renderer/: Cargo.toml  example.c
renderer/src/: bufs.rs  cmds.rs  draw.rs  events.rs  ffi.rs  flip.rs  init.rs  initialize.rs  lib.rs  main.rs  pass.rs  pipeline.rs  shaders.rs  sync.rs  util.rs  utils.rs  vert.rs
src/: assets.lisp  debug.lisp  events.lisp  fps.lisp  log.lisp  loop.lisp  main.lisp  movement.lisp  ogl-program.lisp  ogl-uniforms.lisp  ogl-vabo.lisp  package.lisp  packages.lisp  render-fps.lisp  render-math.lisp  render-object.lisp  render.lisp  renderer.lisp  scripts.lisp  special.lisp  swank-module.lisp  thunks.lisp  utils.lisp  xform.lisp
tools/: gefsModel.c
(+119 files in other folders)
