[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
name = "nova"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.13"
ash = "0.29.0"
byteorder = "1.3.2"
derivative = "1.0.3"
glfw = { version = "0.33.0", features = ["vulkan"] }
lazy_static = "1.4.0"
log = "0.4.8"
memoffset = "0.5.1"
stderrlog = "0.4.1"
