[workspace]
members = [".", "lye"]

[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
name = "nova"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.13"
derivative = "1.0.3"
lye = { path = "lye" }

[dev-dependencies]
ash = "0.29.0"
log = "0.4.8"
stderrlog = "0.4.1"
