[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
name = "renderer"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
ash = "0.29.0"
derivative = "1.0.3"
glfw = { version = "0.33.0", features = ["vulkan"] }
lazy_static = "1.4.0"
libremexre = "0.1.12"
log = "0.4.8"
stderrlog = "0.4.1"
